add non function

--- a/BNN.ipynb
+++ b/BNN.ipynb
@@ -452,7 +452,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def func_non(a):\n",
+    "    a+=1\n",
+    "    return a"
+   ]
   }
  ],
  "metadata": {
